syntax = "proto3";

option csharp_namespace = "server";

package server;

import "google/protobuf/timestamp.proto";

service AirPollutionNotifier {
  // Periodic notifications about air pollution
  rpc SubscribeOnSchedule(SubscribeOnScheduleRequest) returns (stream AirPollutionNotification);

  // Notifications about air pollution when it exceeds the specified threshold
  rpc SubscribeOnCondition(SubscribeOnConditionRequest) returns (stream AirPollutionNotification);
}

message SubscribeOnScheduleRequest {
  // Periodic notifications interval in seconds
  int32 interval = 1;
  // List of cities to subscribe
  repeated string cities = 2;
}

message SubscribeOnConditionRequest {
  // List of cities to subscribe
  repeated string cities = 1;
  // Criteria to be met for notification
  AirPollutionCriteria criteria = 2;
}

message AirPollutionCriteria {
  // Minimum PM2.5 concentration
  optional double min_pm_2_5 = 1;
  // Maximum PM2.5 concentration
  optional double max_pm_2_5 = 2;
  // Minimum PM10 concentration
  optional double min_pm_10 = 3;
  // Maximum PM10 concentration
  optional double max_pm_10 = 4;
}

enum AirPollutionLevel {
  UNKNOWN = 0;
  GOOD = 1;
  MODERATE = 2;
  UNHEALTHY_FOR_SENSITIVE_GROUPS = 3;
  UNHEALTHY = 4;
  VERY_UNHEALTHY = 5;
  HAZARDOUS = 6;
}

message AirPollutionMeasurement {
  // City name
  string city = 1;
  // PM2.5 measurement
  Pm25Measurement pm_2_5 = 2;
  // PM10 measurement
  Pm10Measurement pm_10 = 3;
}

message Pm25Measurement {
  // PM2.5 concentration
  double value = 1;
  // Air pollution level
  AirPollutionLevel level = 2;
  // Timestamp of the measurement
  google.protobuf.Timestamp timestamp = 3;
}

message Pm10Measurement {
  // PM10 concentration
  double value = 1;
  // Air pollution level
  AirPollutionLevel level = 2;
  // Timestamp of the measurement
  google.protobuf.Timestamp timestamp = 3;
}

message AirPollutionNotification {
  // Air pollution measurement
  repeated AirPollutionMeasurement measurements = 1;
  // Timestamp of the notification
  google.protobuf.Timestamp timestamp = 2;
}
